--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
               <label for="text-area" class="mt-4 mb-2">Comments: </label>
               <textarea class="form-control shadow-none" name="text-area" placeholder="Leave a comment here" id="text-area" style="height: 150px"></textarea>
             </div>
-            <button type="submit" class="btn d-block mx-auto w-25 fw-bold fs-5" style="background-color: #FF312E; color: #fffffa;">Send</button>
+            <button type="submit" class="btn d-block mx-auto w-25 fw-bold" style="background-color: #FF312E; color: #fffffa;">Send</button>
 
           </form>
         </div>
